# ac_conference_helper

./: .env  .gitignore  README.md  chat_system.py  display.py  llm_integration.py  models.py  openreview_client.py  pyproject.toml  requirements.txt  run.py  streamlit_chat.py  submission_analyzer.py  utils.py
scripts/: run.py  run_tests.py
src/ac_conference_helper/: __init__.py
src/ac_conference_helper/client/: __init__.py  openreview_client.py
src/ac_conference_helper/config/: __init__.py  conference_config.py  constants.py
src/ac_conference_helper/core/: __init__.py  chat_system.py  display.py  llm_integration.py  models.py  submission_analyzer.py
src/ac_conference_helper/ui/: __init__.py  streamlit_chat.py
src/ac_conference_helper/utils/: __init__.py  logging_config.py  utils.py
tests/: test_conference_helper.py  test_display.py  test_models.py  test_openreview_client.py
