[project]
name = "ac-conference-helper"
version = "0.1.0"
description = "AC Conference Helper - A tool for analyzing conference submissions and reviews"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "structlog>=25.5.0",
    "tabulate>=0.9.0",
    "pydantic>=2.0.0",
    "python-dotenv",
    "selenium>=4.27.1",
    "tqdm>=4.67.1",
    "streamlit",
    "requests",
    "numpy",
    "ollama>=0.3.0",
]
